# cookiecutter-fastapi-api

./: CONTRIBUTING.md  README.md  cookiecutter.json
sample/fastapi_async_api/: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
sample/fastapi_async_api/app/api/v1/: auth.py
sample/fastapi_async_api/app/core/: redis.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  {{% if cookiecutter.use_docker == "yes" %}}Dockerfile{{% endif %}}  {{% if cookiecutter.use_docker == "yes" %}}docker-compose.yaml{{% endif %}}
{{cookiecutter.project_slug}}/.github/workflow/: ci.yaml
