[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

{% if cookiecutter.database == "sqlite" %}
aiosqlite = "^0.20.0"
{% elif cookiecutter.database == "postgresql" %}
asyncpg = "^0.29.0"
{% elif cookiecutter.database == "mysql" %}
aiomysql = "^0.2.0"
{% endif %}

{% if cookiecutter.use_redis == "yes" %}
redis = "^5.0.3"
aioredis = "^2.0.1"
{% endif %}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
