[tool.poetry]
name = "fastapi_async_api"
version = "0.1.0"
description = "An async web API using FastAPI and Uvicorn"
authors = ["Carrington Muleya"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


aiosqlite = "^0.20.0"



redis = "^5.0.3"
aioredis = "^2.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
